fix(tab)：修复旧配置遗留的创造栏展示上限问题。